--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-cli-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage":".",
   "dependencies": {
     "antd": "^3.13.2",
     "react": "^16.8.6",
